# arduboy_grayscale_rpg

./: .clang-format  .gitignore  ATTRIBUTIONS.txt  CMakeLists.txt  LICENSE.txt  ReturnOfTheArdu.arduboy  ReturnOfTheArdu_mini.arduboy  arduboy_grayscale_rpg.arduboy  lipo_discharge.ods
arduboy_build/: .gitignore  LICENSE.txt  ReturnOfTheArdu.elf  _build.bat  _build_mini.bat  _build_sh1106.bat  _elf.elf  _write_flashcart.bat  arduboy_grayscale_rpg.arduboy  flashcart-index.csv  fxdata-build.py  fxdata.txt  info.json
assets/: .~lock.consumables.csv#  .~lock.sprites.csv#  _update_generated.bat  _update_generated.sh  consumables.csv  convert_map.py  convert_sprites.py  enemies.csv  extract_sprite_planes.py  game_over_messages.txt  items.csv  items.txt  passives_and_abilities.txt  player_sprites.xcf  portraits.csv  sfx_chatter.mid  sfx_damage.mid  sfx_item.mid  song_battle.mid  song_battle2.mid  song_defeat.mid  song_dungeon.mid  song_peaceful.mid  song_peaceful2.mid  song_peaceful3.mid  song_peaceful4.mid  song_take2.mid  song_test.mid  song_title.mid  song_victory.mid  songs.txt  sprites.csv  tileset.tsx  world.tmx
demo/: ArduboyG.h  demo.ino  tile_img.hpp
dev_notes/: SpritesU.txt  draw_tiles.txt  lipo_discharge.ods  puzzle_ideas.txt  story.txt  story_linear.ods  world_image.txt
scripts/: convert_font.py  convert_game_over_messages.py  convert_items.py  convert_map.py  convert_midi.py  convert_sprites.py  extract_sprite_planes.py  font.py  gen_fxheader.py  gen_fxsave.py  save_tile_solid.py  script_assembler.py
src/: ArduboyFX.cpp  ArduboyG.h  SpritesU.hpp  SynthU.hpp  audio_sdl2.cpp  battery.cpp  battle.cpp  common.cpp  common.hpp  draw.cpp  font_adv.hpp  gif.h  gifenc.c  gifenc.h  init.cpp  items.cpp  main_sdl.cpp  map.cpp  pause.cpp  pause_party.cpp  platform.cpp  render.cpp  save.cpp  script_commands.hpp  song_defeat.c  song_main2.c  song_main3.c  song_peaceful.c  song_victory.c  src.ino  tile_solid.hpp  update.cpp
src/ATMlib2/: ATMlib2.cpp  LICENSE  README.md  atm_cmd_constants.h  atm_synth.c  atm_synth.h
src/src/ATMlib2/: ATMlib2.cpp  ATMlib2.h  atm_cmd_constants.h  atm_synth.c  atm_synth.h  cmd_parse.c  osc.c  osc.h
